--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
-    "@tailwindcss/vite": "^4.0.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.2"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
