--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
-    "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "@rollup/rollup-linux-x64-gnu": "4.6.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    "tailwindcss": "3.4.1"
   }
 }
