--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "esModuleInterop": true,
+    "lib": ["ES2015", "DOM", "DOM.Iterable", "ESNext"],
+    "target": "ES2015"
   }
 }
