--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
         "watch:tailwind": "bun tailwindcss -i ./src/styles/global.css -o ./public/styles/tailwind.css --watch"
     },
     "dependencies": {
-        "@astrojs/react": "^4.2.0",
+        "@astrojs/react": "4.3.0",
         "@tailwindcss/vite": "^4.0.3",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
-        "astro": "^5.2.3",
+        "astro": "5.8.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
     },
