feat: Integrate Cloudflare Worker for wellness survey submission
Updates the [submitSurvey](cci:1://file:///e:/aura_landing/freakscode-landing/src/utils/api.ts:0:0-76:2) function in [src/utils/api.ts](cci:7://file:///e:/aura_landing/freakscode-landing/src/utils/api.ts:0:0-0:0) to send
data from the wellness survey (encuesta_bienestar_aura_v1) to the
newly configured Cloudflare Worker.

Key changes:
- Sets Cloudflare Worker as the primary endpoint for wellness surveys.
- Removes deprecated Azure endpoint logic and associated fallback mechanisms.
- Simplifies the API call structure for survey submissions.
- Includes minor JSDoc cleanup in the [api.ts](cci:7://file:///e:/aura_landing/freakscode-landing/src/utils/api.ts:0:0-0:0) file.

This change aims to centralize survey data collection via Cloudflare KV
and streamline the backend integration.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # build output
 dist/
 
+# bun
+bun.lock
+
 # generated types
 .astro/
 
@@ -22,3 +25,12 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# azure functions
+azure-functions/
+local.settings.json
+host.json
+
+# gitignore for azure functions
+.gitignore
+.funcignore
