--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@astrojs/react": "4.3.0",
+        "@astrojs/sitemap": "^3.4.0",
         "@azure/storage-blob": "^12.27.0",
         "@tailwindcss/vite": "^4.0.3",
         "@types/react": "^19.0.8",
